[tool.poetry]
name = "devops-healer"
version = "0.1.0"
description = ""
authors = ["Rahul Pandey <pyrahulpndt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.4.7"
langchain = "^0.3.25"
langchain-openai = "^0.3.18"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
